--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 						// Create an array of typing text
 						const typingTexts = [
 						'Explorer   ',
-						'MSc. AI & ML   ',
-						'BSc.    ',
+						'M.Sc. AI & ML   ',
+						'B.Sc. IT    ',
 						];
 
 						// Create a function to display the typing animation for a given text
@@ -213,7 +213,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 									  <div class="about-img">
-										<img src="images/about-me.png" class="img-fluid rounded b-shadow-a" alt="">
+										<img src="images/about-me.jpg" class="img-fluid rounded b-shadow-a" alt="">
 									  </div>
 									</div>
 									<!-- Details next to profile image -->
@@ -629,7 +629,7 @@
 					  <li class="ftco-animate normal-txt">Find me on  </li>
 <!-- 					  <li class="ftco-animate"><a href="https://www.youtube.com/@RishabhMishraOfficial"><span class="icon-youtube"></span></a></li> -->
 					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/divyanshu-mittal-4b652228a/"><span class="icon-linkedin"></span></a></li>  
-					  <li class="ftco-animate"><a href="https://github.com/d01mittal"><span class="icon-github"></span></a></li>
+					  <li class="ftco-animate"><a href="https://github.com/Adityak8340"><span class="icon-github"></span></a></li>
 <!-- 					  <li class="ftco-animate"><a href="https://www.kaggle.com/divu2001"><span class="icon-kaggle"></span></a></li> -->
 <!-- 				      <li class="ftco-animate"><a href="https://www.instagram.com/rishabhnmishra/"><span class="icon-instagram"></span></a></li> -->
 					</ul>
