--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">My name is <span>Aditya Kumar Tiwari</span></h1>
+			            <h1 class="mb-4 mt-3">This is <span>Aditya Kumar Tiwari</span></h1>
 
 						<!-- Element to contain animated typing -->
 						<span id="typing-animation"></span>
@@ -187,7 +187,7 @@
 
 						<br>
 						<br>
-			            <h2>An Aspiring AI Engineer and Data Scientist</h2>
+			            <h2>An Aspiring AI Engineer</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/aditya-kumar-tiwari-a787-levi-eren/" class="btn btn-primary py-3 px-4">LinkedIn</a> 
@@ -402,84 +402,62 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are the AI, Data Science and Data Analytics projects including LLMs (Llama-3, Gemini-1.5-Flash), Machine Learning, ARIMA, NLP, Excel, SQL and Power BI. 🌟</p>
+            <p>Below projects showcase a diverse range of AI and data-driven applications. Each project demonstrates proficiency in various technologies such as FastAPI, React, Streamlit, PyPDF2, Llama3, and API integrations, highlighting skills in AI implementation, data processing, and web application development. 🌟</p>
           </div>
         </div>
         <div class="row d-flex">
 		<div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/d01mittal/UltraBot" class="block-20 zoom-effect" style="background-image: url('images/proj_new.png');">
+              <a href="https://github.com/Adityak8340/RealEstateBackend" class="block-20 zoom-effect" style="background-image: url('images/RealEstate.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/d01mittal/UltraBot">UltraBot</a></h3>
-                <p>Using the power of LangChain, Llama-3, Gemini-1.5-Flash, developed a chatbot which can perform text to text and image to text tasks with many customization options also.</p>
+                <h3 class="heading"><a href="https://github.com/Adityak8340/RealEstateBackend">Real Estate Insights</a></h3>
+                <p>AI-powered tool for competitive real estate project analysis and environmental assessment. Integrates multiple APIs for data extraction, performs multi-factor analysis, generates AI-powered comprehensive reports.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/d01mittal/ChefBot" class="block-20 zoom-effect" style="background-image: url('images/proj_1.png');">
+              <a href="https://github.com/Adityak8340/flexibot" class="block-20 zoom-effect" style="background-image: url('images/flexibot.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/d01mittal/ChefBot">ChefBot👨‍🍳</a></h3>
-                <p>Using the power of Groq low latency and the knowledge of Llama, built a user-centric Streamlit application for recipe generator for any type of dish.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/d01mittal/Satellite-Position-Forecasting" class="block-20 zoom-effect" style="background-image: url('images/proj_2.png');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-
-                <h3 class="heading"><a href="https://github.com/d01mittal/Satellite-Position-Forecasting">Satellite Position Forecasting</a></h3>
-                <p>Using the power of LSTM and ARIMA techniques, forecast the position of a satellite to reduce the risk of collision of LEO satellites.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry">
-              <a href="https://github.com/d01mittal/Text-Emotion-Detection" class="block-20 zoom-effect" style="background-image: url('images/proj_3.png');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-
-                <h3 class="heading"><a href="https://github.com/d01mittal/Text-Emotion-Detection">Text Emotion Detection</a></h3>
-                <p>Using the knowledge of NLP and Neattext, built a user-centric Streamlit application to predict the sentiment of any text.</p>
+                <h3 class="heading"><a href="https://github.com/Adityak8340/flexibot">FlexiBot</a></h3>
+                <p>Customizable chatbot with realistic typing effect, context retention, multiple language models, and image analysis. Achieved 200 ms response time, 92% accuracy, handled up to 500 requests/min. </p>
               </div>
             </div>
           </div>
 	<div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/d01mittal/Pizza-Sales-Analysis-Using-SQL" class="block-20 zoom-effect" style="background-image: url('images/proj_4.png');">
+              <a href="https://github.com/Adityak8340/docbot" class="block-20 zoom-effect" style="background-image: url('images/docbot.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/d01mittal/Pizza-Sales-Analysis-Using-SQL">Pizza Sales Analysis Using SQL</a></h3>
-                <p>Analysed the data of the pizza sales and solved the SQL queries related to it, to develop a portfolio project.</p>
+                <h3 class="heading"><a href="https://github.com/Adityak8340/docbot">DocBot</a></h3>
+                <p>Web app for document interaction using PyPDF2, Tesseract OCR, and Llama3 for query responses. Implimented RAG, 1-3 second response time, 20-30 requests/min, processes up to 100-page PDFs.</p>
               </div>
             </div>
           </div>
 	<div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/d01mittal/Zomato-Sales-Dashboard-Using-PowerBI" class="block-20 zoom-effect" style="background-image: url('images/proj_5.png');">
-              </a>
-              <div class="text mt-3 float-right d-block">
+			<div class="blog-entry justify-content-end">
+			<a href="https://github.com/Adityak8340/melodify" class="block-20 zoom-effect" style="background-image: url('images/Melodify.png');">
+			</a>
+			<div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/d01mittal/Zomato-Sales-Dashboard-Using-PowerBI">Zomato Sales Dashboard Using Power BI</a></h3>
-                <p>Analysed the data of the zomato sales and using the Power BI, developed a dashboard for representation and understanding of the data.</p>
-              </div>
-            </div>
-          </div>
+			  <h3 class="heading"><a href="https://github.com/Adityak8340/melodify">Melodify</a></h3>
+			  <p>AI-powered web app converting text prompts into personalized songs using GPT-3.5 Turbo and Bark Model. Generates lyrics within 30-word limit, creates audio using advanced text-to-speech model, handles real-time user interactions.</p>
+			</div>
+		  </div>
+		</div>
 	<div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/d01mittal/Coffee-Shop-Sales-DashBoard-Using-Excel" class="block-20 zoom-effect" style="background-image: url('images/proj_6.png');">
+              <a href="https://github.com/Adityak8340/smashcast" class="block-20 zoom-effect" style="background-image: url('images/smashcast.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/d01mittal/Coffee-Shop-Sales-DashBoard-Using-Excel">Coffee Shop Sales DashBoard Using Excel</a></h3>
-                <p>Analysed the data of a coffee shop sales and using the Excel, developed a dashboard for representation and understanding of the data.</p>
+                <h3 class="heading"><a href="https://github.com/Adityak8340/smashcast">SmashCast</a></h3>
+                <p>AI-powered tool for predicting suitable time slots for playing badminton based on weather forecasts. Integrates OpenWeatherMap API for weather data extraction, performs multi-factor analysis, classify the playbility using Naive-Bayes classifier.</p>
               </div>
             </div>
           </div>
